--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ repository = "https://github.com/night-cruise/mychip8"
 #categories = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "main"
+path = "bin/main.rs"
 
 [dependencies]
 rand = "0.8.0"
+sdl2 = "0.35"
